// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`neon-auth > disable 1`] = `
"
Neon Auth has been disabled

"
`;

exports[`neon-auth > enable 1`] = `
"auth_provider: better_auth
auth_provider_project_id: test-auth-project-id
pub_client_key: pk_test_123
secret_server_key: sk_test_456
jwks_url: https://auth.test.neon.tech/.well-known/jwks.json
schema_name: neon_auth
table_name: users_sync
base_url: https://auth.test.neon.tech
"
`;

exports[`neon-auth > status 1`] = `
"auth_provider: better_auth
auth_provider_project_id: test-auth-project-id
branch_id: br-sunny-branch-123456
db_name: neondb
base_url: https://auth.test.neon.tech
created_at: 2024-01-01T00:00:00Z
jwks_url: https://auth.test.neon.tech/.well-known/jwks.json
"
`;
